--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,7 @@
 // ----------------------------------------------------------------------
 @import "utils/mixins";
 @import "utils/extends";
+@import "utils/bootstrap";
 
 // ----------------------------------------------------------------------
   // Base
