Add border to test for document width

--- a/css/style.css
+++ b/css/style.css
@@ -4349,6 +4349,9 @@ button.close {
   .hidden-print {
     display: none !important; } }
 
+* {
+  border: 1px solid red; }
+
 html {
   font-size: 100%;
   box-sizing: border-box; }
