--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -10,6 +10,7 @@ $sassyXSmall: 400;
 	// Font Sizes
 // ----------------------------------------------------------------------
 $regularSize: 12;
+$mediumSize:16;
 
 // ----------------------------------------------------------------------
 	// Font Families
@@ -20,3 +21,9 @@ $helvetica: Helvetica, Arial, sans-serif;
   // Grid
 // ----------------------------------------------------------------------
 $grid-columns: 12;
+
+// ----------------------------------------------------------------------
+  // Grid
+// ----------------------------------------------------------------------
+$mainColor: #657FB3;
+$textbackColor: #eee;
