--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,9 @@
 // ----------------------------------------------------------------------
   // Modules
 // ----------------------------------------------------------------------
-
+@import "modules/image-section";
+@import "modules/text";
+@import "modules/app-container";
 // ----------------------------------------------------------------------
   // Themes
 // ----------------------------------------------------------------------
