--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -25,5 +25,5 @@ $grid-columns: 12;
 // ----------------------------------------------------------------------
   // Grid
 // ----------------------------------------------------------------------
-$mainColor: #657FB3;
+$mainColor: #c7c7c7;
 $textbackColor: #eee;
