--- a/assets/Ada Lovelace Tribute_files/style.css
+++ b/assets/Ada Lovelace Tribute_files/style.css
@@ -4426,10 +4426,10 @@ h1 {
   text-decoration: underline;
   font-style: italic; }
 
-.figure-text, .list-text, .quote-text, .wiki-text, blockquote p:last-of-type, blockquote p:first-of-type {
+.figure-text, .list-text, .quote-text, blockquote p:first-of-type, .wiki-text, blockquote p:last-of-type {
   font-size: 16px; }
 
-.quote-text, .wiki-text, blockquote p:last-of-type, blockquote p:first-of-type {
+.quote-text, blockquote p:first-of-type {
   text-align: center;
   padding: 0 6px; }
 
